--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,13 +1,16 @@
 
 
+<div class="store-image">
+  <div class="col-md-6 col-md-offset-3">
+    <% if @store.yelp_image == nil %>
+      <%= image_tag('store_default.jpg', :class => 'store-show-image') %>
+    <% else %>
+      <%= image_tag(@store.yelp_image, :class => 'store-show-image') %>
+    <% end %>
+  </div>
+</div>
 
 <div class="col-md-6 col-md-offset-3">
-
-  <% if @store.yelp_image == nil %>
-    <%= image_tag('store_default.jpg', :class => 'store-show-image') %>
-  <% else %>
-    <%= image_tag(@store.yelp_image, :class => 'store-show-image') %>
-  <% end %>
 
   <table class="table">
   <tr>
@@ -27,7 +30,9 @@
   </tr>
   <tr>
     <td>
-      <p><%= @store.location_address %></p>
+      <a href="maps:ll=<%= @store.coordinate_lat %>,<%= @store.coordinate_lon %>&z=15">
+        <address><%= @store.location_address %></address>
+      </a>
     </td>
   </tr>
   <tr>
