--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
         <li class="<%= @controller == "categories" ? "active" : "" %>"><%= link_to 'Category', categories_path %></li>
         <li class="<%= @controller == "events" ? "active" : "" %>"><%= link_to 'Event', events_path %></li>
         <li class="<%= @controller == "djs" ? "active" : "" %>"><%= link_to 'DJ', djs_path %></li>
-        <li><a href="#">Meetup</a></li>
+        <li class="<%= @controller == "meetups" ? "active" : "" %>"><%= link_to 'Meetup', meetups_path %></li>
         <li><a href="#">Taxi</a></li>
         <li role="separator" class="divider visible-xs-block"></li>
         <% if current_user %>
