--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -2,10 +2,12 @@
 
 <div class="store-image">
   <div class="col-md-6 col-md-offset-3">
-    <% if @store.yelp_image == nil %>
-      <%= image_tag('store_default.jpg', :class => 'store-show-image') %>
+    <% if @store.photo %>
+      <%= image_tag(@store.photo) %>
+    <% elsif @store.yelp_image == nil %>
+      <%= image_tag('store_default.jpg', :class => 'def-img') %>
     <% else %>
-      <%= image_tag(@store.yelp_image, :class => 'store-show-image') %>
+      <%= image_tag(@store.yelp_image) %>
     <% end %>
   </div>
 </div>
