--- a/app/views/djs/show.html.erb
+++ b/app/views/djs/show.html.erb
@@ -1,18 +1,26 @@
 
-<div class="col-xs-12">
-  <% if @dj.photo.exists? == false %>
-    <%= image_tag("dj_img.jpg", :class => "") %>
-  <% else %>
-    <%= image_tag @dj.photo.url, :class => "" %>
+<div class="col-md-6 dj-show-left">
+  <div class="col-xs-12">
+    <% if @dj.photo.exists? == false %>
+      <%= image_tag("dj_img.jpg", :class => "") %>
+    <% else %>
+      <%= image_tag @dj.photo.url, :class => "" %>
+    <% end %>
+    <h1><%= @dj.name %></h1>
+  </div>
+  <div class="row">
+  <% @dj.events.each do |x| %>
+    <div class="col-md-6">
+      <%= link_to image_tag(x.edm, :class => "image-edm"), event_path(x) %>
+    </div>
   <% end %>
-  <h1><%= @dj.name %></h1>
+  </div>
 </div>
 
-
-
-
-<% @dj.playlists.each do |x| %>
-  <div class="col-md-3">
-    <%= raw(x.content) %>
-  </div>
-<% end %>
+<div class="col-md-6 dj-show-right">
+  <% @dj.playlists.each do |x| %>
+    <div class="col-xs-12">
+      <%= raw(x.content) %>
+    </div>
+  <% end %>
+</div>
