--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-md-6 col-md-offset-3">
+<div class="col-xs-12 col-md-6 col-md-offset-2">
   <h1><%= @event.title %></h1>
   <table class='table'>
     <tr>
@@ -38,4 +38,8 @@
     </tr>
 
   </table>
+</div>
+
+<div class="col-md-4">
+  <%= image_tag(@event.edm(:medium), :class => "img-responsive") %>
 </div>
