--- a/app/views/admin/djs/show.html.erb
+++ b/app/views/admin/djs/show.html.erb
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="col-md-6">
     <h1><%= @dj.name %></h1>
-     <% if @dj.photo.exists? == false %>
-        <%= image_tag("dj_img.jpg", :class => "img-responsive") %>
-      <% else %>
+     <% if @dj.photo.exists? %>
         <%= image_tag @dj.photo.url(:medium), :class => "img-responsive" %>
+      <% else %>
+        <%= image_tag("dj_img.jpg", :class => "img-responsive") %>
       <% end %>
     <table class="table">
       <tr>
