--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -13,7 +13,7 @@
   <th>Due_at</th>
   <th></th>
 </tr>
-<% Event.all.each do |x| %>
+<% @event.each do |x| %>
   <tr>
     <td><%= x.status %></td>
     <td><%= link_to x.title, admin_event_path(x) %></td>
@@ -39,4 +39,4 @@
 </table>
 
 
-<%= link_to 'New Event', new_admin_event_path, :class => 'btn btn-default' %>
+<%= paginate @event, :theme => 'twitter-bootstrap-3', :pagination_class => "pagination-sm" %>
