--- a/app/assets/stylesheets/tipsy.scss
+++ b/app/assets/stylesheets/tipsy.scss
@@ -1,38 +1,237 @@
 
-body {
-  background: #002961;
-}
+$lightblue: #40a2d1;
 
-.navbar-brand {
-  padding: 5px;
-}
+.tipsy {
 
-.banner {
-  overflow: hidden;
-
-  #bgvid {
-    z-index: -100;
-    width: 100%;
-    height: 600px;
-    position: absolute;
-    top: 0;
-    background-image: image-url("banner.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    // -webkit-filter: blur(2px);
-    // filter: blur(2px);
-    // transform: scale(1.1);
-  }
+  .banner {
   
-  h1 {
-    color: #fff;
-    display: block;
-    text-align: center;
+    #banner-bg {
+      z-index: -100;
+      width: 100%;
+      height: 700px;
+      position: absolute;
+      top: 0;
+      background-image: image-url("banner.jpg");
+      background-repeat: no-repeat;
+      // background-attachment: fixed;
+      background-size: cover;
+      // -webkit-filter: blur(2px);
+      // filter: blur(2px);
+      // transform: scale(1.1);
+    }
+
+    .black-wrap {
+      position: absolute;
+      background: rgba(0,0,0,0.5);
+      width: 100%;
+      height: 645px;
+      z-index: 10;
+    }
+
+    .jumbotron {
+      background: none;
+      position: relative;
+      z-index: 100;
+    }
+    
+    h1 {
+      color: #fff;
+      display: block;
+      text-align: center;
+    }
+
+    a {
+      color: #fff;
+      text-decoration: none;
+    }
+    a:hover {
+      color: $lightblue;
+    }
+
+    .fa {
+      position:relative;
+      animation: shrink 0.8s infinite;
+    }
+
+    @keyframes shrink {
+      0% {
+        top: 5px;
+      }
+      50% {
+        top: 20px;
+      }
+      100% {
+        top: 5px;
+      }
+    }
+
+
+  }
+
+
+  .wrap {
+    
+    img {
+      width: 100%;
+    }
+
+    .col-md-4, .col-md-5, .col-md-6, .col-md-7 {
+      padding: 0;
+    }
+    .rt1, .rt2, .rm1, .rm2, .rm3, .rb1, .rb2 {
+      background-size: auto;
+      background-repeat: no-repeat;
+      background-position: center; 
+
+    }
+
+    
+    .col-l1 {
+      background: image-url("l1.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center; 
+      h2 {
+        margin-top: 180px;
+        display: block;
+        text-align: center;
+        font-size: 5em;
+      }
+      p {
+        margin-top: 50px;
+        display: block;
+        text-align: center;
+        font-size: 1.5em;
+      }
+    }
+    .rb1 {
+      background: image-url("rb1.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center; 
+
+      .black-wrap{
+        position: absolute;
+        background: rgba(0,0,0,0.5);
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+      }
+      .container {
+        position: absolute;
+        width: 100%;
+        z-index: 100; 
+      }
+      h2 {
+        position: relative;
+        margin-top: 50px;
+        display: block;
+        text-align: center;
+        font-size: 4em;
+      }
+      p {
+        position: relative;
+        display: block;
+        text-align: center;
+        font-size: 1.4em; 
+      }
+    }
+    .rb2 {
+      background: image-url("rb2.jpg");
+    }
+
+  }
+
+  .wrap2 {
+    .black-wrap{
+      position: absolute;
+      background: rgba(0,0,0,0.6);
+      width: 100%;
+      height: 400px;
+      z-index: 10;
+    }
+    .jumbotron {
+      background: image-url("club-queue.jpg");
+      background-repeat: no-repeat;
+      background-position: 30% center; 
+      background-size: cover;
+      margin-bottom: 0;
+      height: 400px;
+      padding-top: 100px;
+      padding-left: 0;
+      padding-right: 0;
+    }
+    .container {
+      position: absolute;
+      display: block;
+      margin: 0 auto;
+      width: 100%;
+      z-index: 100;
+    }
+    .vip-btn {
+      color: #333;
+      text-decoration: none;
+      background: #fff;
+      padding: 10px 25px 10px 25px;
+      border-radius: 25px;
+    }
+    .vip-btn:hover {
+      background: #eee;
+      color: $lightblue;
+    }
+
+  }
+
+  .modal {
+    color: #000;
+  }
+
+  footer {
+    background: #111;
+    .container {
+      height: 600px;  
+
+      .col-md-4 {
+        height: 100%;
+        padding: 30px;
+      }
+      .foot3 {
+        input, textarea {
+          background: #161616;
+          border: 1px solid #666;
+        }
+        .btn {
+          color: #fff;
+        }
+      }
+    }
+
   }
 
 }
 
+@media screen and (max-width: 750px) {
+  .tipsy {
+    .wrap {
+      .col-l1 {
+        z-index: 101;
+        height: 700px;
+        h2 {
+          margin-top: 80px;
+          padding-top: 60px;
+        }
+      }
+      .rb1 {
+        height: 400px;
+
+        p {
+          margin-top: 50px;
+        }
+      }
+    }
+    
+  }
+}
 
 
 
