add tipsy controller, contact us form.

--- a/app/assets/stylesheets/tipsy.scss
+++ b/app/assets/stylesheets/tipsy.scss
@@ -199,6 +199,7 @@ $lightblue: #40a2d1;
         input, textarea {
           background: #161616;
           border: 1px solid #666;
+          color: #fff;
         }
         .btn {
           color: #fff;
