--- a/app/views/tipsy/index.html.erb
+++ b/app/views/tipsy/index.html.erb
@@ -6,7 +6,7 @@
       <div class="empty200px"></div>
       <h1>探索台北夜晚新生活</h1>
       <h3>放鬆 x 狂歡</h3>
-      <div class="empty100px"></div>
+      <div class="empty100px hideen-xs"></div>
       <p>
         <a href="#content1" class="banner-btn">EXPLORE<br><i class="fa fa-chevron-down"></i></a>
       </p>
