add index email validate.

--- a/app/assets/stylesheets/tipsy.scss
+++ b/app/assets/stylesheets/tipsy.scss
@@ -204,6 +204,11 @@ $lightblue: #40a2d1;
         .btn {
           color: #fff;
         }
+        .email-val {
+          display: block;
+          text-align: right;
+          
+        }
       }
     }
 
