--- a/app/assets/stylesheets/tipsy.scss
+++ b/app/assets/stylesheets/tipsy.scss
@@ -195,6 +195,22 @@ $lightblue: #40a2d1;
         height: 100%;
         padding: 30px;
       }
+      .foot2 {
+        ul {
+          padding-left: 0;
+          padding-top:30px;
+          li {
+            list-style: none;
+            margin-bottom: 15px;
+            a {
+              color: #fff;
+            }
+            p {
+              font-size: 1.2em;
+            }
+          }
+        }
+      }
       .foot3 {
         input, textarea {
           background: #161616;
@@ -207,7 +223,7 @@ $lightblue: #40a2d1;
         .email-val {
           display: block;
           text-align: right;
-          
+
         }
       }
     }
@@ -278,6 +294,12 @@ $lightblue: #40a2d1;
           margin-top: 50px;
         }
       }
+    }
+  }
+  footer {
+    background: #111;
+    .container {
+      height: 600px;  
     }
   }
 }
