--- a/app/views/tipsy/index.html.erb
+++ b/app/views/tipsy/index.html.erb
@@ -69,8 +69,16 @@
       <div class="col-md-4 foot1 hidden-xs">
         <h3>INFO</h3>
       </div>
-      <div class="col-md-4 foot2 hidden-xs">
+      <div class="col-md-4 foot2">
         <h3>SERVICE</h3>
+        <ul>
+          <li><a href="#"><p>消費資詢</p></a></li>
+          <li><a href="#"><p>包廂訂位</p></a></li>
+          <li><a href="#"><p>包場服務</p></a></li>
+          <li><a href="#"><p>活動企劃</p></a></li>
+          <li><a href="#"><p>私人派對</p></a></li>
+          <li><a href="#"><p>校際聯誼</p></a></li>
+        </ul> 
       </div>
       <div class="col-md-4 foot3">
         <h3>CONTACT US</h3>
@@ -121,24 +129,22 @@
 <!-- alert -->
 <div id="show_alert" style="display:none;"></div>
 
-<% if flash[:notice].present? %>
+<% if flash[:success].present? %>
   <script>
-    // alert("<%= flash[:notice] %>");
     $('#vip-modal').modal('show');
     $('#vip-modal .modal-title').html("");
     $('#vip-modal .modal-body').html("");
     $('#vip-modal .modal-title').append("感謝您的來信！");
-    $('#vip-modal .modal-body').append('<%=flash[:notice]%>');
+    $('#vip-modal .modal-body').append('<%=flash[:success]%>');
   </script>  
 <% end %>
-<% if flash.now[:alert].present? %>
+<% if flash.now[:wrong].present? %>
   <script>
-    // alert("<%= flash[:notice] %>");
     $('#vip-modal').modal('show');
     $('#vip-modal .modal-title').html("");
     $('#vip-modal .modal-body').html("");
     $('#vip-modal .modal-title').append("ERROR!!!");
-    $('#vip-modal .modal-body').append('<%=flash.now[:alert]%>');
+    $('#vip-modal .modal-body').append('<%=flash.now[:wrong]%>');
   </script>  
 <% end %>
 
